Fixing images on mobile

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -356,12 +356,15 @@ nav h4:hover {
         align-items: center;
     }
 
+    .gradebook-project img,
     .personal-website img,
     .tic-tac-toe img,
     .weatherful-bot img,
-    .gradebook-project img {
-        height: auto;
-        width: fit-content;
+    .gradebook-img {
+        height: 150px;
+        width: 250px;
+        max-width: 400px;
+        justify-content: center;
     }
 }
 
